<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textmasa"
        android:layout_width="84dp"
        android:layout_height="21dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="43dp"
        android:text="@string/masa_txt"
        app:layout_constraintEnd_toStartOf="@+id/masa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/masa"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="162dp"
        android:ems="10"
        android:hint="@string/wskazowka_masa"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="19dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:text="@string/wzrost_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmasa"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/wzrost"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/wskazowka_wzrost"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/opcjaWzrostu"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/masa"
        tools:ignore="MissingConstraints" />


    <Spinner
        android:id="@+id/opcjaWzrostu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="11dp"
        android:entries="@array/wzrost_opcje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></Spinner>

    <Button
        android:id="@+id/przycisk_oblicz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="15dp"
        android:onClick="mClick"
        android:text="@string/przycisk_txt"
        app:layout_constraintBottom_toTopOf="@+id/Wynik"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/wynik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <EditText
        android:id="@+id/wiek"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="175dp"
        android:hint="@string/wskazowka_wiek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textwiek"
        app:layout_constraintTop_toBottomOf="@+id/wzrost"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textwiek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="47dp"
        android:text="@string/wiek_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textplec"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="30dp"
        android:text="@string/plec"
        app:layout_constraintBottom_toTopOf="@+id/spsób_licznia_txt"
        app:layout_constraintEnd_toStartOf="@+id/plec_opcja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textwiek"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/plec_opcja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="133dp"
        android:entries="@array/plec_opcje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wiek"
        tools:ignore="MissingConstraints"></Spinner>

    <TextView
        android:id="@+id/spsób_licznia_txt"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="28dp"
        android:text="@string/sposób_liczenia"
        app:layout_constraintBottom_toTopOf="@+id/sposób_opcje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <Spinner
        android:id="@+id/sposób_opcje"
        android:layout_width="116dp"
        android:layout_height="22dp"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="44dp"
        android:entries="@array/sposób_opcje"
        app:layout_constraintBottom_toTopOf="@+id/przycisk_oblicz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"></Spinner>

    <TextView
        android:id="@+id/Wynik"
        android:layout_width="61dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="25dp"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewWynik"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewWynik"
        android:layout_width="112dp"
        android:layout_height="23dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="44dp"
        android:text="@string/wynik_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/przycisk_oblicz"
        app:layout_constraintVertical_bias="0.583"
        tools:ignore="MissingConstraints"
        tools:text="Twoje PPM to :" />


</android.support.constraint.ConstraintLayout>